--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Photon by HTML5 UP</title>
+		<title>Bid For Peace</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -28,13 +28,13 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<span class="icon major fa-cloud"></span>
-					<h1>Hi, I'm <strong>Photon</strong>, another fine<br />
-					little freebie from <a href="http://html5up.net">HTML5 UP</a>.</h1>
-					<p>Accumsan feugiat mi commodo erat lorem ipsum, sed magna<br />
-					lobortis feugiat sapien sed etiam volutpat accumsan.</p>
+					<h1><strong>Bid For Peace</strong></h1>
+                    <p>an ultimate festival and fundraiser<br />
+                        benefitting <a href="http://www.ultimatepeace.org/">Ultimate Peace</a>.</p>
 					<ul class="actions">
-						<li><a href="#one" class="button scrolly">Discover</a></li>
+						<li><a href="#one" class="button scrolly">Showcase</a></li>
+						<li><a href="#two" class="button scrolly">Party</a></li>
+						<li><a href="#three" class="button scrolly">Tournament</a></li>
 					</ul>
 				</div>
 			</section>
@@ -45,13 +45,12 @@
 					<div class="row 150%">
 						<div class="6u 12u$(medium)">
 							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
+								<h2>Showcase Games</h2>
 							</header>
-							<p>Adipiscing a commodo ante nunc accumsan et interdum mi ante adipiscing. A nunc lobortis non nisl amet vis sed volutpat aclacus nascetur ac non. Lorem curae et ante amet sapien sed tempus adipiscing id accumsan.</p>
+							<p>Every year, we host a throwdown between some of the best players in ultimate. We like to keep things interesting by creating matchups that wouldn't otherwise happen. The first year, Minnesota's own Professional team, the MN Windchill played the top men's club team, SubZero. The following year, we pit Pop against the ladies from Minnesota's top 3 mixed club teams. Stay tuned to see what we'll do this year!</p>
 						</div>
 						<div class="6u$ 12u$(medium) important(medium)">
-							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/pull.png" alt="windchill pulls" /></span>
 						</div>
 					</div>
 				</div>
