update festival section

--- a/index.html
+++ b/index.html
@@ -32,52 +32,42 @@
                     <p>an ultimate festival and fundraiser<br />
                         benefitting <a href="http://www.ultimatepeace.org/">Ultimate Peace</a>.</p>
 					<ul class="actions">
-						<li><a href="#one" class="button scrolly">Showcase</a></li>
-						<li><a href="#two" class="button scrolly">Party</a></li>
+						<li><a href="#festival" class="button scrolly">Festival</a></li>
+						<li><a href="#showcase" class="button scrolly">Showcase</a></li>
 						<li><a href="#three" class="button scrolly">Tournament</a></li>
 					</ul>
 				</div>
 			</section>
 
-		<!-- One -->
-			<section id="one" class="main style1">
+			<section id="festival" class="main style1">
 				<div class="container">
 					<div class="row 150%">
 						<div class="6u 12u$(medium)">
 							<header class="major">
-								<h2>Showcase Games</h2>
+								<h2>Festival</h2>
 							</header>
-							<p>Every year, we host a throwdown between some of the best players in ultimate. We like to keep things interesting by creating matchups that wouldn't otherwise happen. The first year, Minnesota's own Professional team, the MN Windchill played the top men's club team, SubZero. The following year, we pit Pop against the ladies from Minnesota's top 3 mixed club teams. Stay tuned to see what we'll do this year!</p>
+							<p>Our primary goal with Bid For Peace is to put on a party that everyone will enjoy. The first year, we had a band and some food trucks. The second year we had a silent auction and a bunch of games including sand volleyball at Biff's Sports Bar. Both years Surly donated kegs and everyone had a great time. Details of this year's party will be forthcoming.</p>
 						</div>
-						<div class="6u$ 12u$(medium) important(medium)">
-							<span class="image fit"><img src="images/pull.png" alt="windchill pulls" /></span>
+						<div class="6u$ 12u$(medium)">
+						    <div class="6u$ 12u$(medium) important(medium)">
+							    <span class="image fit"><img src="images/band.png" alt="guitar shreds" /></span>
+						    </div>
 						</div>
 					</div>
 				</div>
 			</section>
 
-		<!-- Two -->
-			<section id="two" class="main style2">
+			<section id="showcase" class="main style2">
 				<div class="container">
 					<div class="row 150%">
 						<div class="6u 12u$(medium)">
-							<ul class="major-icons">
-								<li><span class="icon style1 major fa-code"></span></li>
-								<li><span class="icon style2 major fa-bolt"></span></li>
-								<li><span class="icon style3 major fa-camera-retro"></span></li>
-								<li><span class="icon style4 major fa-cog"></span></li>
-								<li><span class="icon style5 major fa-desktop"></span></li>
-								<li><span class="icon style6 major fa-calendar"></span></li>
-							</ul>
+							<span class="image fit"><img src="images/pull.png" alt="windchill pulls" /></span>
 						</div>
-						<div class="6u$ 12u$(medium)">
+						<div class="6u$ 12u$(medium) important(medium)">
 							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
+								<h2>Showcase Games</h2>
 							</header>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
-							<p>Blandit faucibus proin. Ac aliquam integer adipiscing enim non praesent vis commodo nunc phasellus cubilia ac risus accumsan. Accumsan blandit. Lobortis phasellus non lobortis dit varius mi varius accumsan lobortis. Blandit ante aliquam lacinia lorem lobortis semper morbi col faucibus vitae integer placerat accumsan orci eu mi odio tempus adipiscing adipiscing adipiscing curae consequat feugiat etiam dolore.</p>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
+							<p>Every year, we host a throwdown between some of the best players in ultimate. We like to keep things interesting by creating matchups that wouldn't otherwise happen. The first year, Minnesota's own Professional team, the MN Windchill played the top men's club team, SubZero. The following year, we pit Pop against the ladies from Minnesota's top 3 mixed club teams. Stay tuned to see what we'll do this year!</p>
 						</div>
 					</div>
 				</div>
