--- a/index.html
+++ b/index.html
@@ -33,74 +33,38 @@
                         benefitting <a href="http://www.ultimatepeace.org/">Ultimate Peace</a>.</p>
 					<ul class="actions">
 						<li><a href="#festival" class="button scrolly">Festival</a></li>
-						<li><a href="#showcase" class="button scrolly">Showcase</a></li>
-						<li><a href="#three" class="button scrolly">Tournament</a></li>
+						<li><a href="#fundraiser" class="button scrolly">Fundraiser</a></li>
 					</ul>
 				</div>
 			</section>
 
-			<section id="festival" class="main style1">
-				<div class="container">
-					<div class="row 150%">
-						<div class="6u 12u$(medium)">
-							<header class="major">
-								<h2>Festival</h2>
-							</header>
-							<p>Our primary goal with Bid For Peace is to put on a party that everyone will enjoy. The first year, we had a band and some food trucks. The second year we had a silent auction and a bunch of games including sand volleyball at Biff's Sports Bar. Both years Surly donated kegs and everyone had a great time. Details of this year's party will be forthcoming.</p>
-						</div>
-						<div class="6u$ 12u$(medium)">
-						    <div class="6u$ 12u$(medium) important(medium)">
-							    <span class="image fit"><img src="images/band.png" alt="guitar shreds" /></span>
-						    </div>
-						</div>
-					</div>
-				</div>
-			</section>
-
-			<section id="showcase" class="main style2">
-				<div class="container">
-					<div class="row 150%">
-						<div class="6u 12u$(medium)">
-							<span class="image fit"><img src="images/pull.png" alt="windchill pulls" /></span>
-						</div>
-						<div class="6u$ 12u$(medium) important(medium)">
-							<header class="major">
-								<h2>Showcase Games</h2>
-							</header>
-							<p>Every year, we host a throwdown between some of the best players in ultimate. We like to keep things interesting by creating matchups that wouldn't otherwise happen. The first year, Minnesota's own Professional team, the MN Windchill played the top men's club team, SubZero. The following year, we pit Pop against the ladies from Minnesota's top 3 mixed club teams. Stay tuned to see what we'll do this year!</p>
-						</div>
-					</div>
-				</div>
-			</section>
-
-		<!-- Three -->
-			<section id="three" class="main style1 special">
+			<section id="festival" class="main style1 special">
 				<div class="container">
 					<header class="major">
-						<h2>Adipiscing amet consequat</h2>
+						<h2>Festival</h2>
 					</header>
-					<p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p>
+					<p>Our primary goal with Bid For Peace is to put on a party that everyone will enjoy and at the same time, raise a bunch of money to give to Ultimate Peace. Here's an idea of what we've done in the past to accomplish this goal.</p>
 					<div class="row 150%">
 						<div class="4u 12u$(medium)">
-							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<span class="image fit"><img src="images/pull.png" alt="windchill pulls" /></span>
+							<h3>Showcase Games</h3>
+							<p>There are some incredible ultimate players in Minnesota and we like to showcase their skills in matchups that you won't see anywhere else. Whether it's pro vs. club, or an elite women's team against the ladies from the top mixed teams, the games are always exciting.</p>
 							<ul class="actions">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
 						</div>
 						<div class="4u 12u$(medium)">
-							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<span class="image fit"><img src="images/band.png" alt="guitar shreds" /></span>
+							<h3>Entertainment</h3>
+							<p>We're not doing our jobs if you're not having an awesome time. We've hired bands, played spikeball and cornhole, and raffled everything from jerseys to burritos. It'll be an awesome day of fun and you'll probably go home with something.</p>
 							<ul class="actions">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
 						</div>
 						<div class="4u$ 12u$(medium)">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<h3>Hat Tournament</h3>
+							<p>We've found that hosting a hat tournament is not only crazy fun, but it is also in the spirit of Ultimate Peace, which is all about creating new bonds of friendship and respect. Come meet some new people and see what you have to learn from each other.</p>
 							<ul class="actions">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
@@ -109,8 +73,24 @@
 				</div>
 			</section>
 
+			<section id="fundraiser" class="main style1">
+				<div class="container">
+             					<div class="row 150%">
+ 						<div class="6u 12u$(medium)">
+ 							<header class="major">
+								<h2>Showcase Games</h2>
+ 							</header>
+							<p>Every year, we host a throwdown between some of the best players in ultimate. We like to keep things interesting by creating matchups that wouldn't otherwise happen. The first year, Minnesota's own Professional team, the MN Windchill played the top men's club team, SubZero. The following year, we pit Pop against the ladies from Minnesota's top 3 mixed club teams. Stay tuned to see what we'll do this year!</p>
+ 						</div>
+ 						<div class="6u$ 12u$(medium) important(medium)">
+							<span class="image fit"><img src="images/pull.png" alt="windchill pulls" /></span>
+ 						</div>
+ 					</div>
+ 				</div>
+			</section>
+            
 		<!-- Four -->
-			<section id="four" class="main style2 special">
+			<section id="fundraiser" class="main style1">
 				<div class="container">
 					<header class="major">
 						<h2>Ipsum feugiat consequat?</h2>
