add section about ultimate peace

--- a/index.html
+++ b/index.html
@@ -73,24 +73,27 @@
 				</div>
 			</section>
 
-			<section id="fundraiser" class="main style1">
+			<section id="fundraiser" class="main style2">
 				<div class="container">
-             					<div class="row 150%">
+             		<div class="row 150%">
  						<div class="6u 12u$(medium)">
  							<header class="major">
-								<h2>Showcase Games</h2>
+								<h2>Fundraiser</h2>
  							</header>
-							<p>Every year, we host a throwdown between some of the best players in ultimate. We like to keep things interesting by creating matchups that wouldn't otherwise happen. The first year, Minnesota's own Professional team, the MN Windchill played the top men's club team, SubZero. The following year, we pit Pop against the ladies from Minnesota's top 3 mixed club teams. Stay tuned to see what we'll do this year!</p>
+                            <p>Ultimate Peace is a non-profit organization fostering community through the joy of throwing a disc. UP offers camps and year round programs geared to bring kids from different backgrounds together through the sport of Ultimate. UP's mission is:</p>
+                            <p>"To build bridges of friendship, understanding and fun for youth from different social and cultural backgrounds around the world."</p>
+                            <p>UP began fulfilling their mission in the Middle East in 2009, and has recently begun offering camps in Colombia. They have been widely recognized in Israel and internationally for making a sustainable positive difference in the communities they work with.</p>
  						</div>
  						<div class="6u$ 12u$(medium) important(medium)">
-							<span class="image fit"><img src="images/pull.png" alt="windchill pulls" /></span>
+							<span class="image fit"><img src="images/upLogo.png" alt="UP logo" /></span>
+							<span class="image fit"><img src="images/camp2013.png" alt="camp UP" /></span>
  						</div>
  					</div>
  				</div>
 			</section>
             
 		<!-- Four -->
-			<section id="fundraiser" class="main style1">
+			<section id="four" class="main style1 special">
 				<div class="container">
 					<header class="major">
 						<h2>Ipsum feugiat consequat?</h2>
