--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
+                    <img src="images/BidForPeaceLogo.svg" alt="bfp logo" />
 					<h1><strong>Bid For Peace</strong></h1>
                     <p>an ultimate festival and fundraiser<br />
                         benefitting <a href="http://www.ultimatepeace.org/">Ultimate Peace</a>.</p>
@@ -122,14 +123,11 @@
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="http:facebook.com/bidforpeace" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="mailto:bidforpeace@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Bid For Peace</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</section>
 
