add expanding for spots with too much text

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.scrolly.min.js"></script>
+		<script src="js/jquery.readon.min.js"></script>
 		<script src="js/skel.min.js"></script>
 		<script src="js/init.js"></script>
 		<noscript>
@@ -74,13 +75,17 @@
                                 <iframe src="https://player.vimeo.com/video/54248736" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                             </div>
  						</div>
- 						<div class="6u$ 12u$(medium)">
+ 						<div class="6u$ 12u$(medium) item">
  							<header class="major">
 								<h2>Ultimate Peace</h2>
  							</header>
-                            <p>Ultimate Peace is a non-profit organization fostering community through the joy of throwing a disc. UP offers camps and year round programs geared to bring kids from different backgrounds together through the sport of Ultimate. UP's mission is:</p>
-                            <blockquote>"To build bridges of friendship, understanding and fun for youth from different social and cultural backgrounds around the world."</blockquote>
-                            <p>UP began fulfilling their mission in the Middle East in 2009, and has recently begun offering camps in Colombia. They have been widely recognized in Israel and internationally for making a sustainable positive difference in the communities they work with.</p>
+                            <p>Ultimate Peace is a non-profit organization fostering community through the joy of throwing a disc. UP offers camps and year round programs geared to bring kids from different backgrounds together through the sport of Ultimate.</p>
+                            <p><a href="#" class="button read_more">More</a></p>
+                            <div class="more_text">
+                                <p>UP's mission is:</p>
+                                <blockquote>"To build bridges of friendship, understanding and fun for youth from different social and cultural backgrounds around the world."</blockquote>
+                                <p>UP began fulfilling their mission in the Middle East in 2009, and has recently begun offering camps in Colombia. They have been widely recognized in Israel and internationally for making a sustainable positive difference in the communities they work with.</p>
+                            </div>
  						</div>
  					</div>
  				</div>
