add pic and more social connectors

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<script src="js/skel.min.js"></script>
 		<script src="js/init.js"></script>
 		<noscript>
+            <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-xlarge.css" />
@@ -59,7 +60,7 @@
 							<p>We're not doing our jobs if you're not having an awesome time. We've hired bands, played spikeball and cornhole, and raffled everything from jerseys to burritos. It'll be an awesome day of fun and you'll probably go home with something.</p>
 						</div>
 						<div class="4u$ 12u$(medium)">
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/tourney.png" alt="" /></span>
 							<h3>Hat Tournament</h3>
 							<p>We've found that hosting a hat tournament is not only crazy fun, but it is also in the spirit of Ultimate Peace, which is all about creating new bonds of friendship and respect. Come meet some new people and see what you have to learn from each other.</p>
 						</div>
@@ -128,7 +129,9 @@
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="http:facebook.com/bidforpeace" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="http://facebook.com/bidforpeace" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="http://twitter.com/bidforpeace" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+                    <li><a href="https://plus.google.com/+Bidforpeace" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
 					<li><a href="mailto:bidforpeace@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
