add link to pre-registration form

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<div class="6u 12u$(medium)">
 							<h3>Saturday, June 13</h3>
 							<span class="image fit"><img src="images/pull.png" alt="windchill pulls to subzero" /></span>
-                            <p>Come watch two highly competitive showcase ultimate games, men’s and women’s, featuring a mix of the best club and pro-Ultimate players throughout Minnesota. The showcase games will be held in the evening at Irondale High School.</p>
+                            <p>Come watch two highly competitive showcase ultimate games, men’s and women’s, featuring a mix of the best club and pro-Ultimate players throughout Minnesota. The showcase games will be held in the evening at Irondale High School. Pre-register for the event using this <a href="https://docs.google.com/forms/d/1G4e2c1ydg0wGkZK-6ezhfplaN4wxagqesUEPskCVqQE/viewform">Google form</a>! Walk-ins welcome.</p>
 						</div>
 						<div class="6u$ 12u$(medium)">
 							<h3>Saturday, July 11</h3>
