update hat tournye date and location

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                             <p>Come watch two highly competitive showcase ultimate games, men’s and women’s, featuring a mix of the best club and pro-Ultimate players throughout Minnesota. The showcase games will be held in the evening at Irondale High School. Pre-register for the event using this <a href="https://docs.google.com/forms/d/1G4e2c1ydg0wGkZK-6ezhfplaN4wxagqesUEPskCVqQE/viewform">Google form</a>! Walk-ins welcome.</p>
 						</div>
 						<div class="6u$ 12u$(medium)">
-							<h3>Saturday, July 11</h3>
+							<h3>Saturday, July 25</h3>
 							<span class="image fit"><img src="images/tourney.png" alt="hat tournaments are fun" /></span>
-							<p>We'll be  hosting a hat tournament in the spirit of Ultimate Peace, which is all about creating new bonds of friendship and respect. Come meet some new people, see what you have to learn from each other, and get a fun day of Ultimate in.</p>
+							<p>At Lake Nokomis Park, we'll be  hosting a hat tournament in the spirit of Ultimate Peace, which is all about creating new bonds of friendship and respect. Come meet some new people, see what you have to learn from each other, and get a fun day of Ultimate in.</p>
 						</div>
 					</div>
 				</div>
