add google form for tournament registration

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<div class="6u$ 12u$(medium)">
 							<h3>Saturday, July 25</h3>
 							<span class="image fit"><img src="images/tourney.png" alt="hat tournaments are fun" /></span>
-							<p>At Lake Nokomis Park, we'll be  hosting a hat tournament in the spirit of Ultimate Peace, which is all about creating new bonds of friendship and respect. Come meet some new people, see what you have to learn from each other, and get a fun day of Ultimate in.</p>
+							<p>At Lake Nokomis Park, we'll be  hosting a hat tournament in the spirit of Ultimate Peace, which is all about creating new bonds of friendship and respect. Come meet some new people, see what you have to learn from each other, and get a fun day of Ultimate in. Register using this <a href="https://payableform.appspot.com/forms/krmhy">Google form</a>!</p>
 						</div>
 					</div>
 				</div>
