add registration form link to hat tournament section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						<div class="4u$ 12u$(medium)">
 							<span class="image fit"><img src="images/tourney.png" alt="" /></span>
 							<h3>Hat Tournament</h3>
-							<p>We've found that hosting a hat tournament is not only crazy fun, but it is also in the spirit of Ultimate Peace, which is all about creating new bonds of friendship and respect. Come meet some new people and see what you have to learn from each other.</p>
+							<p>We've found that hosting a hat tournament is not only crazy fun, but it is also in the spirit of Ultimate Peace, which is all about creating new bonds of friendship and respect. Come meet some new people and see what you have to learn from each other. Register using this <a href="https://payableform.appspot.com/forms/krmhy">Google form</a>!</p>
 						</div>
 					</div>
 				</div>
