--- a/index.html
+++ b/index.html
@@ -30,37 +30,39 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-                    <span class="icon major"><img src="images/BidForPeaceLogo.svg" alt="bfp logo" /></span>
+                    <img src="images/BidForPeaceLogo.svg" alt="bfp logo" />
 					<h1><strong>Bid For Peace</strong></h1>
                     <p>an ultimate festival and fundraiser<br />
                         benefitting <a href="http://www.ultimatepeace.org/">Ultimate Peace</a>.</p>
 					<ul class="actions">
-						<li><a href="#about" class="button scrolly">2015</a></li>
+						<li><a href="#festival" class="button scrolly">Festival</a></li>
+						<li><a href="#fundraiser" class="button scrolly">Fundraiser</a></li>
+						<li><a href="#donate" class="button scrolly">Donate</a></li>
 					</ul>
 				</div>
 			</section>
 
-			<section id="about" class="main style1 special">
+			<section id="festival" class="main style1 special">
 				<div class="container">
 					<header class="major">
-						<h2>This Year's Events</h2>
+						<h2>Ultimate Frisbee Festival</h2>
 					</header>
-                    <p>For 2015, we're splitting up the fun over two days. Follow Bid for Peace on social media for updates and event invites.</p>
-				    <ul class="icons">
-					    <li><a href="http://facebook.com/bidforpeace" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-					    <li><a href="http://twitter.com/bidforpeace" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-                        <li><a href="https://plus.google.com/+Bidforpeace" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-                    </ul>
+					<p>Our primary goal with Bid For Peace is to put on a party that everyone will enjoy and at the same time, raise a bunch of money to give to Ultimate Peace. Here's an idea of what we've done in the past to accomplish this goal.</p>
 					<div class="row 150%">
-						<div class="6u 12u$(medium)">
-							<h3>Saturday, June 13</h3>
-							<span class="image fit"><img src="images/pull.png" alt="windchill pulls to subzero" /></span>
-                            <p>Come watch two highly competitive showcase ultimate games, men’s and women’s, featuring a mix of the best club and pro-Ultimate players throughout Minnesota. The showcase games will be held in the evening at Irondale High School. Pre-register for the event using this <a href="https://docs.google.com/forms/d/1G4e2c1ydg0wGkZK-6ezhfplaN4wxagqesUEPskCVqQE/viewform">Google form</a>! Walk-ins welcome.</p>
+            <div class="4u 12u$(medium)">
+							<span class="image fit"><img src="images/tourney.png" alt="" /></span>
+							<h3>Hat Tournament</h3>
+							<p>We've found that hosting a hat tournament is not only crazy fun, but it is also in the spirit of Ultimate Peace, which is all about creating new bonds of friendship and respect. Come meet some new people and see what you have to learn from each other. Register using this <a href="https://payableform.appspot.com/forms/krmhy">Google form</a>!</p>
 						</div>
-						<div class="6u$ 12u$(medium)">
-							<h3>Saturday, July 25</h3>
-							<span class="image fit"><img src="images/tourney.png" alt="hat tournaments are fun" /></span>
-							<p>At Lake Nokomis Park, we'll be  hosting a hat tournament in the spirit of Ultimate Peace, which is all about creating new bonds of friendship and respect. Come meet some new people, see what you have to learn from each other, and get a fun day of Ultimate in. Register using this <a href="https://payableform.appspot.com/forms/krmhy">Google form</a>!</p>
+						<div class="4u 12u$(medium)">
+							<span class="image fit"><img src="images/band.png" alt="guitar shreds" /></span>
+							<h3>Entertainment</h3>
+							<p>We're not doing our jobs if you're not having an awesome time. We've hired bands, played spikeball and cornhole, and raffled everything from jerseys to burritos. It'll be an awesome day of fun and you'll probably go home with something.</p>
+						</div>
+						<div class="4u$ 12u$(medium)">
+							<span class="image fit"><img src="images/pull.png" alt="windchill pulls" /></span>
+							<h3>Showcase Games</h3>
+							<p>There are some incredible ultimate players in Minnesota and we like to showcase their skills in matchups that you won't see anywhere else. Whether it's pro vs. club, or an elite women's team against the ladies from the top mixed teams, the games are always exciting.</p>
 						</div>
 					</div>
 				</div>
@@ -130,12 +132,10 @@
 					<li><a href="http://facebook.com/bidforpeace" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 					<li><a href="http://twitter.com/bidforpeace" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
                     <li><a href="https://plus.google.com/+Bidforpeace" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-                    <li><a href="https://github.com/coldpour/bfp" class="icon fa-github"><span class="label">Github</span></a></li>
 					<li><a href="mailto:bidforpeace@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Bid For Peace</li>
-                    <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Bid For Peace</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</section>
 
