--- a/index.html
+++ b/index.html
@@ -5,139 +5,142 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Bid For Peace</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/jquery.scrolly.min.js"></script>
-		<script src="js/jquery.readon.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/init.js"></script>
-		<noscript>
+
+<head>
+  <title>Bid For Peace</title>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <meta name="description" content="" />
+  <meta name="keywords" content="" />
+  <!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+  <script src="js/jquery.min.js"></script>
+  <script src="js/jquery.scrolly.min.js"></script>
+  <script src="js/jquery.readon.min.js"></script>
+  <script src="js/skel.min.js"></script>
+  <script src="js/init.js"></script>
+  <noscript>
       <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-xlarge.css" />
 		</noscript>
-		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
-	</head>
-	<body>
+  <!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
+  <!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+</head>
 
-		<!-- Header -->
-			<section id="header">
-				<div class="inner">
-                    <img src="images/BidForPeaceLogo.svg" alt="bfp logo" />
-					<h1><strong>Bid For Peace</strong></h1>
-                    <p>an ultimate festival and fundraiser<br />
-                        benefitting <a href="http://www.ultimatepeace.org/">Ultimate Peace</a>.</p>
-					<ul class="actions">
-						<li><a href="#festival" class="button scrolly">Festival</a></li>
-						<li><a href="#fundraiser" class="button scrolly">Fundraiser</a></li>
-						<li><a href="#donate" class="button scrolly">Donate</a></li>
-					</ul>
-				</div>
-			</section>
+<body>
 
-			<section id="festival" class="main style1 special">
-				<div class="container">
-					<header class="major">
-						<h2>Ultimate Frisbee Festival</h2>
-					</header>
-					<p>Our primary goal with Bid For Peace is to put on a party that everyone will enjoy and at the same time, raise a bunch of money to give to Ultimate Peace. Here's an idea of what we've done in the past to accomplish this goal.</p>
-					<div class="row 150%">
-            <div class="4u 12u$(medium)">
-							<span class="image fit"><img src="images/tourney.png" alt="" /></span>
-							<h3>Hat Tournament</h3>
-							<p>We've found that hosting a hat tournament is not only crazy fun, but it is also in the spirit of Ultimate Peace, which is all about creating new bonds of friendship and respect. Come meet some new people and see what you have to learn from each other.</p>
-						</div>
-						<div class="4u 12u$(medium)">
-							<span class="image fit"><img src="images/band.png" alt="guitar shreds" /></span>
-							<h3>Entertainment</h3>
-							<p>We're not doing our jobs if you're not having an awesome time. We've hired bands, played spikeball and cornhole, and raffled everything from jerseys to burritos. It'll be an awesome day of fun and you'll probably go home with something.</p>
-						</div>
-						<div class="4u$ 12u$(medium)">
-							<span class="image fit"><img src="images/pull.png" alt="windchill pulls" /></span>
-							<h3>Showcase Games</h3>
-							<p>There are some incredible ultimate players in Minnesota and we like to showcase their skills in matchups that you won't see anywhere else. Whether it's pro vs. club, or an elite women's team against the ladies from the top mixed teams, the games are always exciting.</p>
-						</div>
-					</div>
-				</div>
-			</section>
+  <!-- Header -->
+  <section id="header">
+    <div class="inner">
+      <img src="images/BidForPeaceLogo.svg" alt="bfp logo" />
+      <h1><strong>Bid For Peace</strong></h1>
+      <p>an ultimate festival and fundraiser<br /> benefitting <a href="http://www.ultimatepeace.org/">Ultimate Peace</a>.</p>
+      <ul class="actions">
+        <li><a href="#festival" class="button scrolly">Festival</a></li>
+        <li><a href="#fundraiser" class="button scrolly">Fundraiser</a></li>
+        <li><a href="#donate" class="button scrolly">Donate</a></li>
+      </ul>
+    </div>
+  </section>
 
-			<section id="fundraiser" class="main style2">
-				<div class="container">
-             		<div class="row 150%">
- 						<div class="6u 12u$(medium)">
-							<div class="fit js-video vimeo">
-                                <iframe src="https://player.vimeo.com/video/54248736" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                            </div>
- 						</div>
- 						<div class="6u$ 12u$(medium) item">
- 							<header class="major">
-								<h2>Ultimate Peace</h2>
- 							</header>
-                            <p>Ultimate Peace is a non-profit organization fostering community through the joy of throwing a disc. UP offers camps and year round programs geared to bring kids from different backgrounds together through the sport of Ultimate.</p>
-                            <p><a href="#" class="button read_more">More</a></p>
-                            <div class="more_text">
-                                <p>UP's mission is:</p>
-                                <blockquote>"To build bridges of friendship, understanding and fun for youth from different social and cultural backgrounds around the world."</blockquote>
-                                <p>UP began fulfilling their mission in the Middle East in 2009, and has recently begun offering camps in Colombia. They have been widely recognized in Israel and internationally for making a sustainable positive difference in the communities they work with.</p>
-                            </div>
- 						</div>
- 					</div>
- 				</div>
-			</section>
+  <section id="festival" class="main style1 special">
+    <div class="container">
+      <header class="major">
+        <h2>Ultimate Frisbee Festival</h2>
+      </header>
+      <p>Our primary goal with Bid For Peace is to put on a party that everyone will enjoy and at the same time, raise a bunch of money to give to Ultimate Peace. Here's an idea of what we've done in the past to accomplish this goal.</p>
+      <div class="row 150%">
+        <div class="4u 12u$(medium)">
+          <span class="image fit"><img src="images/tourney.png" alt="" /></span>
+          <h3>Hat Tournament</h3>
+          <p>We've found that hosting a hat tournament is not only crazy fun, but it is also in the spirit of Ultimate Peace, which is all about creating new bonds of friendship and respect. Come meet some new people and see what you have to learn from each other.</p>
+        </div>
+        <div class="4u 12u$(medium)">
+          <span class="image fit"><img src="images/band.png" alt="guitar shreds" /></span>
+          <h3>Entertainment</h3>
+          <p>We're not doing our jobs if you're not having an awesome time. We've hired bands, played spikeball and cornhole, and raffled everything from jerseys to burritos. It'll be an awesome day of fun and you'll probably go home with something.</p>
+        </div>
+        <div class="4u$ 12u$(medium)">
+          <span class="image fit"><img src="images/pull.png" alt="windchill pulls" /></span>
+          <h3>Showcase Games</h3>
+          <p>There are some incredible ultimate players in Minnesota and we like to showcase their skills in matchups that you won't see anywhere else. Whether it's pro vs. club, or an elite women's team against the ladies from the top mixed teams, the games are always exciting.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
-			<section id="donate" class="main style1">
-				<div class="container">
-             		<div class="row 150%">
- 						<div class="6u 12u$(medium)">
- 					        <header class="major">
-						        <h2>Donate</h2>
- 					        </header>
-                            <p>In ultimate, "to bid," means to lay out, to unreasonably sacrifice your body for your team and the game and ultimately something bigger than yourself. We bid because we can't get enough of that plastic, because we get a rush when we close our eyes and envision being muddy, on the ground - disc in hand.</p>
-                            <p>"To bid," outside the ultimate world, means to put money down for something, put a stake in something you want enough to commit to it, something you believe in even.</p>
-                            <p>When we ask you to donate to Bid for Peace, we are asking you to bid, keeping both of these definitions in mind. Bid and reach for something greater than yourself. Bid out of the love of all things ultimate. Bid because you believe and would bet money on the fact that our small but mighty sport has the power to change the world for the better - starting with the next generation in the Middle East.</p>
-                        </div>
- 						<div class="6u 12u$(medium)">
-							<span class="image fit"><img src="images/camp2013.png" alt="camp UP" /></span>
-                            <form style="text-align:center" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" id="yui_3_17_2_1_1431042170990_399">
-                                <input type="hidden" name="cmd" value="_s-xclick">
-                                <input type="hidden" name="hosted_button_id" value="DTZVRKX98JWD4">
-                                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!" id="yui_3_17_2_1_1431042170990_398">
-                                <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                            </form>
-                        </div>
-                    </div>
- 				</div>
-			</section>
+  <section id="fundraiser" class="main style2">
+    <div class="container">
+      <div class="row 150%">
+        <div class="6u 12u$(medium)">
+          <div class="fit js-video vimeo">
+            <iframe src="https://player.vimeo.com/video/54248736" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="6u$ 12u$(medium) item">
+          <header class="major">
+            <h2>Ultimate Peace</h2>
+          </header>
+          <p>Ultimate Peace is a non-profit organization fostering community through the joy of throwing a disc. UP offers camps and year round programs geared to bring kids from different backgrounds together through the sport of Ultimate.</p>
+          <p><a href="#" class="button read_more">More</a></p>
+          <div class="more_text">
+            <p>UP's mission is:</p>
+            <blockquote>"To build bridges of friendship, understanding and fun for youth from different social and cultural backgrounds around the world."</blockquote>
+            <p>UP began fulfilling their mission in the Middle East in 2009, and has recently begun offering camps in Colombia. They have been widely recognized in Israel and internationally for making a sustainable positive difference in the communities they work with.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-			<section id="peace" class="main style2 special">
-				<div class="container">
-					<header class="major">
-						<h2>Salaam : Shalom : Paz : Peace</h2>
-					</header>
-                    <p>Thanks for your generosity!</p>
-					<p>Ultimate Peace is a 501(c)3 non-profit registered with the US Internal Revenue Service. Your donations made to Ultimate Peace, Inc. are tax deductible as a charitable contribution. Our tax ID is #27-2840618. Please check with your tax advisor for additional information.</p>
-				</div>
-			</section>
+  <section id="donate" class="main style1">
+    <div class="container">
+      <div class="row 150%">
+        <div class="6u 12u$(medium)">
+          <header class="major">
+            <h2>Donate</h2>
+          </header>
+          <p>In ultimate, "to bid," means to lay out, to unreasonably sacrifice your body for your team and the game and ultimately something bigger than yourself. We bid because we can't get enough of that plastic, because we get a rush when we close our eyes and envision being muddy, on the ground - disc in hand.</p>
+          <p>"To bid," outside the ultimate world, means to put money down for something, put a stake in something you want enough to commit to it, something you believe in even.</p>
+          <p>When we ask you to donate to Bid for Peace, we are asking you to bid, keeping both of these definitions in mind. Bid and reach for something greater than yourself. Bid out of the love of all things ultimate. Bid because you believe and would bet money on the fact that our small but mighty sport has the power to change the world for the better - starting with the next generation in the Middle East.</p>
+        </div>
+        <div class="6u 12u$(medium)">
+          <span class="image fit"><img src="images/camp2013.png" alt="camp UP" /></span>
+          <form style="text-align:center" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" id="yui_3_17_2_1_1431042170990_399">
+            <input type="hidden" name="cmd" value="_s-xclick">
+            <input type="hidden" name="hosted_button_id" value="DTZVRKX98JWD4">
+            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!" id="yui_3_17_2_1_1431042170990_398">
+            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
 
-		<!-- Footer -->
-			<section id="footer">
-				<ul class="icons">
-					<li><a href="http://facebook.com/bidforpeace" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="http://twitter.com/bidforpeace" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-                    <li><a href="https://plus.google.com/+Bidforpeace" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-					<li><a href="mailto:bidforpeace@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
-				</ul>
-				<ul class="copyright">
-					<li>&copy; Bid For Peace</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</section>
+  <section id="peace" class="main style2 special">
+    <div class="container">
+      <header class="major">
+        <h2>Salaam : Shalom : Paz : Peace</h2>
+      </header>
+      <p>Thanks for your generosity!</p>
+      <p>Ultimate Peace is a 501(c)3 non-profit registered with the US Internal Revenue Service. Your donations made to Ultimate Peace, Inc. are tax deductible as a charitable contribution. Our tax ID is #27-2840618. Please check with your tax advisor for additional information.</p>
+    </div>
+  </section>
 
-	</body>
+  <!-- Footer -->
+  <section id="footer">
+    <ul class="icons">
+      <li><a href="http://facebook.com/bidforpeace" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+      <li><a href="http://twitter.com/bidforpeace" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+      <li><a href="https://plus.google.com/+Bidforpeace" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
+      <li><a href="mailto:bidforpeace@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+    </ul>
+    <ul class="copyright">
+      <li>&copy; Bid For Peace</li>
+      <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+    </ul>
+  </section>
+
+</body>
+
 </html>
